[gd_scene load_steps=2 format=3 uid="uid://card_reveal"]

[ext_resource type="Script" path="res://scenes/ui/CardReveal.gd" id="1"]

[node name="CardReveal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="CardContainer" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150
margin_top = -200
margin_right = 150
margin_bottom = 200

[node name="CardBack" type="Panel" parent="CardContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
modulate = Color(0.5, 0.5, 0.5, 1)

[node name="BackPattern" type="TextureRect" parent="CardContainer/CardBack"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 1

[node name="CardFront" type="Panel" parent="CardContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CardBorder" type="NinePatchRect" parent="CardContainer/CardFront"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CardImage" type="TextureRect" parent="CardContainer/CardFront"]
anchor_left = 0.1
anchor_top = 0.15
anchor_right = 0.9
anchor_bottom = 0.6
stretch_mode = 6

[node name="NameLabel" type="Label" parent="CardContainer/CardFront"]
anchor_left = 0.05
anchor_top = 0.65
anchor_right = 0.95
anchor_bottom = 0.75
text = "Card Name"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 20

[node name="TypeLabel" type="Label" parent="CardContainer/CardFront"]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.1
text = "Manager"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="RarityStars" type="HBoxContainer" parent="CardContainer/CardFront"]
anchor_left = 0.5
anchor_top = 0.78
anchor_right = 0.5
anchor_bottom = 0.85
margin_left = -75
margin_right = 75
alignment = 1

[node name="Star1" type="Label" parent="CardContainer/CardFront/RarityStars"]
layout_mode = 2
text = "⭐"
theme_override_font_sizes/font_size = 24

[node name="Star2" type="Label" parent="CardContainer/CardFront/RarityStars"]
layout_mode = 2
text = "⭐"
theme_override_font_sizes/font_size = 24

[node name="Star3" type="Label" parent="CardContainer/CardFront/RarityStars"]
layout_mode = 2
text = "⭐"
theme_override_font_sizes/font_size = 24

[node name="Star4" type="Label" parent="CardContainer/CardFront/RarityStars"]
layout_mode = 2
text = "⭐"
theme_override_font_sizes/font_size = 24

[node name="Star5" type="Label" parent="CardContainer/CardFront/RarityStars"]
layout_mode = 2
text = "⭐"
theme_override_font_sizes/font_size = 24

[node name="AttributesPanel" type="VBoxContainer" parent="CardContainer/CardFront"]
anchor_left = 0.1
anchor_top = 0.85
anchor_right = 0.9
anchor_bottom = 0.95

[node name="SpecialtyLabel" type="Label" parent="CardContainer/CardFront/AttributesPanel"]
layout_mode = 2
text = "Specialty: Balanced"
theme_override_font_sizes/font_size = 14

[node name="RarityEffects" type="Node2D" parent="."]
z_index = -1

[node name="LegendaryParticles" type="CPUParticles2D" parent="RarityEffects"]
position = Vector2(640, 360)
emitting = false
amount = 100
lifetime = 2.0
emission_shape = 3
emission_rect_extents = Vector2(200, 300)
direction = Vector2(0, -1)
spread = 45.0
initial_velocity_min = 100.0
initial_velocity_max = 300.0
scale_amount_min = 0.5
scale_amount_max = 2.0
color = Color(1, 0.8, 0, 1)

[node name="EpicGlow" type="ColorRect" parent="RarityEffects"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.5, 0, 1, 0.2)

[node name="RareShine" type="ColorRect" parent="RarityEffects"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0.5, 1, 0.2)

[node name="SkipButton" type="Button" parent="."]
anchor_left = 0.9
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.1
text = "Skip"

[node name="ContinueButton" type="Button" parent="."]
visible = false
anchor_left = 0.45
anchor_top = 0.9
anchor_right = 0.55
anchor_bottom = 0.95
text = "Continue"

[node name="TapHint" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.85
anchor_right = 0.5
anchor_bottom = 0.9
margin_left = -100
margin_right = 100
text = "Tap to reveal"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18

[connection signal="pressed" from="SkipButton" to="." method="_on_skip_button_pressed"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]